--- a/src/home.njk
+++ b/src/home.njk
@@ -7,4 +7,5 @@ body_title: "Boilerplate Title"
 {% block body %}
   <h1>{{ body_title }}</h1>
   <p>Some text here</p>
+  <a href="/second-page">Second Page</a>
 {% endblock %}
