--- a/src/second-page.njk
+++ b/src/second-page.njk
@@ -3,6 +3,7 @@
 {% block body %}
 <h1>This is the second page. Notice that the url is the same as the filename</h1>
 <p>Also, notice that the href in the anchor tag to go to the home page isn't the same as the filename</p>
+<p>The link should almost always be the same as the filename (minus the .njk part). The only exception is the home.njk page. 
 
 <a href='/'>Home</a>
 {% endblock %}
