--- a/src/home.njk
+++ b/src/home.njk
@@ -1,5 +1,6 @@
 ---
-body_title: "Boilerplate Title"
+body_title: Welcome to the Example Project
+priority: 1.0
 ---
 
 {% extends "./templates/base.njk" %}
@@ -8,4 +9,9 @@ body_title: "Boilerplate Title"
   <h1>{{ body_title }}</h1>
   <p>Some text here</p>
   <a href="/second-page">Second Page</a>
+  <br>
+  <a href="/subdirectory-example/nested">Nested Url</a>
+  <br>
+  <a href="/sitemap.xml">Sitemap</a>
+  <br><br>
 {% endblock %}
