--- a/templates/base.njk
+++ b/templates/base.njk
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    {% include "./partials/head-data.njk" %}
+
   	{% block head %}
 		<!-- Defaults -->
 		<title>Boilerplate</title>
